spectec/test/elab/neg/type-typ-invalid-id.spectec
;; A typdef body's identifier carries a numeric suffix that
;; strip_var_suffix would remove.

syntax x_1 = nat
